<resources>
    <string name="app_name">Cryptili</string>

    <string name="toolBar_title_about">About</string>
    <string name="toolBar_title_history">History</string>
    <string name="toolBar_title_settings">Settings</string>
    <string name="toolBar_title_how2">How to?</string>

    <string name="history_toast_nomsg">There is no message</string>
    <string name="history_dialog_title_delete">Delete history</string>
    <string name="history_dialog_msg_delete">Are you sure you want to delete all the data from your history?</string>
    <string name="history_dialog_noButton_delete">No</string>
    <string name="history_dialog_yesButton_delete">Yes</string>
    <string name="history_toast_deleted">Deleted</string>
    <string name="history_msg_sended">encrypted</string>
    <string name="history_msg_received">decrypted</string>
    <string name="history_optionMenu_delete">Delete history</string>
    <string name="history_noMsgHere">Empty content.</string>


    <string name="optionMenu_settings">Settings</string>
    <string name="optionMenu_invite">Invite</string>
    <string name="optionMenu_about">About</string>
    <string name="optionMenu_reset">Reset</string>
    <string name="optionMenu_how2">How to?</string>


    <string name="dialog_title_reset">Reset</string>
    <string name="dialog_msg_reset">Are you sure you want to reset the system?\n\n(You will loose all your data)\n</string>
    <string name="dialog_noButton_reset">No</string>
    <string name="dialog_yesButton_reset">Yes</string>

    <string name="invitation_msg">I\'m using this app to encrypt my messages and it\'s awesome :D Try it! \n\n https://play.google.com/store/apps/details?id=</string>

    <string name="secret_toast_enterKey">Insert a key first!</string>
    <string name="secret_dialog_title_key">Key</string>
    <string name="secret_dialog_msg_key">Insert a key!</string>
    <string name="secret_dialog_saveButton_key">Save</string>
    <string name="secret_dialog_cancelButton_key">Cancel</string>
    <string name="secret_toast_cantFindTextInCB">No message on top of the clipboard</string>
    <string name="secret_toast_writeMsg">Insert a message first!</string>
    <string name="secret_hintMsg">Message</string>
    <string name="secret_returnButton">Return</string>
    <string name="secret_keyButton">KEY</string>
    <string name="secret_copyButton">Copy</string>
    <string name="secret_sendButton">Send</string>
    <string name="secret_encryptButton">Encrypt</string>
    <string name="secret_pasteButton">Paste</string>
    <string name="secret_decryptButton">Decrypt</string>

    <string name="settings_animation_title">Animation</string>
    <string name="settings_animation_summaryOn">Disable the animation at the starting of the app</string>
    <string name="settings_animation_summaryOff">Enable the animation at the starting of the app</string>
    <string name="settings_history_title">History</string>
    <string name="setting_history_summaryOn">Unsave history</string>
    <string name="settings_history_summaryOff">Save history</string>

    <string name="main_secretButton">Cryptili</string>
    <string name="main_history_Button">History</string>

    <string name="how2_1">How to encrypt a message?</string>
    <string name="how2_2">How to decrypt a message?</string>
    <string name="how2_3">How to send a message?</string>
    <string name="how2_4">How to choose a proper key?</string>
    <string name="how2_5">How to disable the opening animation?</string>
    <string name="how2_6">How to unsave history?</string>
    <string name="how2_1r">Set a key, type in your message in and click on "Encrypt".</string>
    <string name="how2_2r">Set the same key you used for the encryption, insert the encrypted message and click on "Decrypt".</string>
    <string name="how2_3r">Click on send</string>
    <string name="how2_4r">Please check "Vernam cipher" on Google.</string>
    <string name="how2_5r">Click on "settings" then click on disable animation</string>
    <string name="how2_6r">If you don\'t want to save your history click on "settings" then switch off history button</string>

    <string name="about_version">Version 1.01</string>
    <string name="about_rate">Rate this app on Play Store</string>
    <string name="about_like_rate">Like this free no-ad app ?</string>
    <string name="about_contactMe">Contact developer</string>
    <string name="about_sendMeEmail">Question? Suggestions? Send me an email at youben.dev@gmail.com</string>
    <string name="settings_history_limit">History Limit</string>
    <string name="settings_history_limit_summary">Set the maximum number of messages you want to save</string>


</resources>
