<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.youben.cryptili.SecretActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="horizontal">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:background="#80aaaaaa"
        android:textColor="#000"
        android:hint="@string/secret_hintMsg"
        android:id="@+id/text1"/>

</LinearLayout>

<Space
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.2"/>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.75">

    <Button
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secret_encryptButton"
        android:textColor="#000"
        android:id="@+id/cryptButton"
        android:onClick="doSomethingToThisText"/>

    <Button
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secret_pasteButton"
        android:textColor="#000"
        android:background="@drawable/button"
        android:id="@+id/pasteButton"
        android:onClick="pasteText"/>

    <Button
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secret_decryptButton"
        android:textColor="#000"
        android:id="@+id/decryptButton"
        android:onClick="doSomethingToThisText"/>

</RelativeLayout>

<TextView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1.25"
    android:padding="15dp"
    android:background="#80aaaaaa"
    android:id="@+id/text2"
    android:textColor="#000"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.75">

    <Button
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/secret_keyButton"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:onClick="changeKey"
        android:id="@+id/keyButton" />

    <Button
        android:layout_toLeftOf="@+id/keyButton"
        android:layout_toStartOf="@id/keyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secret_copyButton"
        android:textColor="#000"
        android:id="@+id/copyButton"
        android:background="@drawable/button"
        android:layout_marginLeft="11dp"
        android:onClick="copyText"
        android:layout_marginStart="11dp" />

    <Button
        android:layout_toEndOf="@+id/keyButton"
        android:layout_toRightOf="@+id/keyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginRight="13dp"
        android:text="@string/secret_sendButton"
        android:textColor="#000"
        android:onClick="sendMessage"
        android:layout_marginEnd="13dp" />

</RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.75">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/secret_returnButton"
        android:textColor="#000"
        android:onClick="returnPrevious"
        android:id="@+id/button2"
        android:layout_centerInParent="true"/>

</RelativeLayout>



</LinearLayout>
